fix some spacing issues on popups

--- a/style.css
+++ b/style.css
@@ -718,6 +718,7 @@ h6 {
   color: #5C241B;
   border: none;
   float: right;
+  margin-top: 15px;
 }
 
 
@@ -1034,22 +1035,6 @@ span {
   padding-top: 6px;
 }
 
-
-/* @media (max-width: 950px) {
-  .container{
-    width: 90%;
-    padding: 30px 40px 40px 35px ;
-  }
-  .container .content .right-side{
-   width: 75%;
-   margin-left: 55px;
-}
-}
-@media (max-width: 820px) {
-  .container{
-    margin: 40px 0;
-    height: 100%;
-  } */
   .contact-container .content{
     flex-direction: column-reverse;
   }
@@ -1067,7 +1052,5 @@ span {
    width: 100%;
    margin-left: 0;
  }
-/* } */
-
 
 
